--- a/app.properties
+++ b/app.properties
@@ -7,3 +7,4 @@ Hint:hello
 CommitType:TestCommit
 Daughter: Lasya
 Spouse:Neelima Simakurthi
+Master is updated one more time. Please perform merge operation to get the master contents into your simakurthi branch
